test/Fail/UnequalHiding.err
UnequalHiding.agda:7.5-46: error: [UnequalTypes]
The function type
  {A : Set} → A → A
is not a subtype of
  (A : Set) → A → A
because:
  one takes a hidden argument, while the other takes a visible
  argument.
when checking that the expression
λ (id : (A : Set) → A → A) → id One one has type
({A : Set} → A → A) → One
